# RAG-email-agent

./: .env.example  .gitignore  README.md  pyproject.toml
examples/account_research/: northstar_payments.json
examples/company_understanding/: northstar_payments_company_understanding.json
examples/prospects/: public_company_sample_sources.md
examples/raw_account_research/: northstar_payments_raw.json
inputs/: product_profile.json  prospects.csv
knowledge/copywriting/: cold_email.md  copywriting_abc.md  positioning.md
knowledge/product_docs/: product_info.md
outputs/batch_runs/csv-shape-smoke/: drafts.csv  drafts.jsonl  summary.json
src/email_sdr_flow/: __init__.py  batch.py  cli.py  errors.py  graph.py  input_validation.py  prompts.py  retrieval.py  runtime.py  schemas.py  session_store.py
tests/: test_batch_inputs.py  test_batch_outputs.py  test_cli_args.py  test_retrieval.py  test_runtime.py  test_session_store.py
