[project]
name = "email-sdr-langchain-flow"
version = "0.2.0"
description = "Reusable LangChain + LangGraph framework for grounded SDR email generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain",
    "langchain-deepseek",
    "langchain-openai",
    "langgraph",
    "langchain-text-splitters",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
email-sdr-flow = "email_sdr_flow.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/email_sdr_flow"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
